// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-link renders correctly as a default link 1`] = `
<ecl-link path="/example.html" variant="default">
  <!---->
  <a class="ecl-link ecl-link--default" href="/example.html">
    <span class="ecl-link__label">
      A default link
    </span>
  </a>
</ecl-link>
`;

exports[`ecl-link renders correctly as a standalone link 1`] = `
<ecl-link path="/example.html" variant="standalone">
  <!---->
  <a class="ecl-link ecl-link--standalone" href="/example.html">
    <span class="ecl-link__label">
      A standalone link
    </span>
  </a>
</ecl-link>
`;

exports[`ecl-link renders correctly when external 1`] = `
<ecl-link external="" path="/example.html" sr-external="will move you outside of this website" variant="standalone">
  <!---->
  <a class="ecl-link ecl-link--standalone" href="/example.html">
    <span class="ecl-link__label">
      Link label
    </span>
    <slot-fb name="icon-after">
      <ecl-icon class="ecl-link__icon" style-class="ecl-link__icon sc-ecl-link-ec" title-tag="will move you outside of this website">
        <span class="ecl-icon ecl-link__icon sc-ecl-link-ec wt-icon--2xs wt-icon--external wt-icon--placeholder"></span>
      </ecl-icon>
    </slot-fb>
  </a>
</ecl-link>
`;

exports[`ecl-link renders correctly with an icon after 1`] = `
<ecl-link path="/example.html" variant="standalone">
  <!---->
  <a class="ecl-link ecl-link--icon ecl-link--icon-after ecl-link--standalone" href="/example.html">
    <span class="ecl-link__label">
      Link label
    </span>
    <slot-fb hidden="" name="icon-after"></slot-fb>
    <ecl-icon class="ecl-link__icon" icon="check" slot="icon-after">
      <span class="ecl-icon wt-icon--check wt-icon--placeholder wt-icon--xs"></span>
    </ecl-icon>
  </a>
</ecl-link>
`;

exports[`ecl-link renders correctly with an icon before 1`] = `
<ecl-link path="/example.html" theme="ec" variant="standalone">
  <!---->
  <a class="ecl-link ecl-link--icon ecl-link--icon-before ecl-link--standalone" href="/example.html">
    <ecl-icon class="ecl-link__icon" icon="arrow-left" slot="icon-before">
      <span class="ecl-icon wt-icon--arrow-left wt-icon--placeholder wt-icon--xs"></span>
    </ecl-icon>
    <span class="ecl-link__label">
      Link label
    </span>
  </a>
</ecl-link>
`;

exports[`ecl-link renders correctly with an indicator 1`] = `
<ecl-link indicator="true" indicator-value="5" path="/example.html" variant="standalone">
  <!---->
  <a class="ecl-link ecl-link--icon ecl-link--icon-after ecl-link--standalone" href="/example.html">
    <span class="ecl-link__label">
      Link label
    </span>
    <span class="ecl-link__icon-container">
      <ecl-icon class="ecl-link__icon" icon="check" slot="icon-after">
        <span class="ecl-icon wt-icon--check wt-icon--placeholder wt-icon--xs"></span>
      </ecl-icon>
      <ecl-indicator ecl-script="">
        <span class="ecl-indicator" data-ecl-indicator>
          5
        </span>
      </ecl-indicator>
    </span>
  </a>
</ecl-link>
`;
